# xarf-tools

./: .clang-format  .travis.yml  CMakeLists.txt  README.md
cmake/: FindMIMETIC.cmake  FindMimetic.cmake  add_lib.cmake  xarf_headers.cmake
doc/: CMakeLists.txt  doxygen.conf.in
src/: CMakeLists.txt
src/genxarf/: CMakeLists.txt  genxarf.cpp
src/libxarf/: CMakeLists.txt  xarf.hpp
src/libxarf/dynamic_entity/: CMakeLists.txt  dynamicEntity.cpp  dynamicEntity.hpp
src/libxarf/header/: CMakeLists.txt  set_from_char.cpp  set_from_string.cpp  set_message_body_char.cpp  set_message_body_string.cpp  set_to_char.cpp  set_to_string.cpp
src/libxarf/io/: CMakeLists.txt  operator_out.cpp
src/libxarf/message/: CMakeLists.txt  constructor.cpp  info.cpp  message.hpp
